--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -2,17 +2,57 @@
   display: flex;
   padding: 10px 20px;
   align-items: center;
+  justify-content: space-between;
   gap: 20px;
-  div {
-    img {
-      width: 100px;
-      height: 100px;
-      border-radius: 45px;
+  border-bottom: 1px solid var(--purple-900);
+  flex-wrap: wrap;
+  .subcontainer {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-grow: 1;
+    div {
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 45px;
+      }
+    }
+    .containerProfile {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      h2 {
+        font-family: "IBM Plex Sans Thai Looped";
+        color: var(--purple-100);
+      }
+      .followers {
+        display: flex;
+        gap: 10px;
+        span {
+          display: flex;
+          align-items: center;
+          font-weight: bold;
+          gap: 5px;
+          color: var(--purple-100);
+          svg {
+            width: 20px;
+            height: 20px;
+            color: var(--yellow-500);
+          }
+        }
+      }
     }
   }
-  .containerProfile {
+
+  .navigation {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
+    margin: auto;
+    a {
+      color: var(--gray-200);
+    }
   }
 }
