--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,53 @@
 //! font-family: 'IBM Plex Sans Thai Looped', sans-serif;
 //! font-family: 'Roboto', sans-serif;
 
+:root {
+  --white: #ffffff;
+  --black: #000000;
+
+  //gray
+  --gray-900: #171923;
+  --gray-800: #1a202c;
+  --gray-700: #2d3748;
+  --gray-600: #4a5568;
+  --gray-500: #718096;
+  --gray-400: #a0aec0;
+  --gray-300: #cbd5e0;
+  --gray-200: #e2e8f0;
+  --gray-100: #edf2f7;
+  --gray-50: #f7fafc;
+
+  //blue
+  --blue-600: #2b6cb0;
+  --blue-500: #3182ce;
+  --blue-400: #4299e1;
+  --blue-300: #63b3ed;
+  --blue-200: #90cdf4;
+  --blue-100: #bee3f8;
+
+  //purple
+  --purple-900: #322659;
+  --purple-800: #44337a;
+  --purple-600: #6b46c1;
+  --purple-500: #805ad5;
+  --purple-400: #9f7aea;
+  --purple-300: #b794f4;
+  --purple-200: #d6bcfa;
+  --purple-100: #e9d8fd;
+
+  //pink
+  --pink-500: #d53f8c;
+  --pink-450: #cf649a;
+  --pink-400: #ed64a6;
+  --pink-300: #f687b3;
+
+  //yellow
+  --yellow-500: #f7e018;
+
+  //orange
+  --html-color: #eb6329;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -12,6 +59,17 @@ html,
 #root {
   width: 100%;
   height: 100%;
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--gray-800);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--purple-600);
+    border-radius: 20px;
+  }
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
 }
 
 body,
