--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -34,6 +34,7 @@
           align-items: center;
           font-weight: bold;
           gap: 5px;
+          font-weight: bold;
           color: var(--purple-100);
           svg {
             width: 20px;
